--- a/mysite/stat_track/templates/stat_track/league_home.html
+++ b/mysite/stat_track/templates/stat_track/league_home.html
@@ -1,7 +1,7 @@
 {% extends "./base.html" %}
 {% load static %}
 
-{% block title %} Home {% endblock %}
+{% block title %} {{ league.name }} {% endblock %}
 
 {% block scripts %}
     <script src="{% static 'stat_track/js/home.js' %}"></script>
@@ -11,17 +11,24 @@
     {% block content %}
     <div class="container">
         <div class="row">
-          <div class="col lg-10 card" data-bs-theme="dark">
-            <h1 class="text-center">Latest Matchdays</h1>
+            <div class="col lg-10 card bg-dark text-white m-2 text-center">
+                <h2>{{ league.name }}</h2>
+            </div>
+        </div>
+        <div class="row">
+          <div class="col lg-10 card bg-dark text-white m-2">
+            <div class="card-header">
+                <h2 class="text-center">Latest Matchdays</h2>
+            </div>
             <div class="list-group">
                 {% for matchday in latest_match_day_list %}
                     <a href="{% url 'matchday' matchday.id %}" class="text-center list-group-item list-group-item-action list-group-item-dark">{{ matchday }}</a>
                 {% endfor %}
             </div>
           </div>
-          <div class="col lg-10 card" data-bs-theme="dark">
+          <div class="col lg-10 card bg-dark text-white m-2">
             <div class="card-header">
-                <h1 class="text-center">Top Scorers</h1>
+                <h2 class="text-center">Top Scorers</h2>
             </div>
             <div class="table-responsive">
                 <table id="playersList"class="table table-dark table-striped" style="white-space:nowrap;">
