--- a/mysite/stat_track/templates/stat_track/navbar.html
+++ b/mysite/stat_track/templates/stat_track/navbar.html
@@ -14,7 +14,7 @@
                 </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'create_matchday' %}">Create Match</a>
+                    <a class="nav-link" href="{% url 'create_league' %}">Create League</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
