--- a/mysite/users/templates/authenticate/register_user.html
+++ b/mysite/users/templates/authenticate/register_user.html
@@ -11,7 +11,7 @@
   </div>
 {% endif %}
 
-<div class="shadow p-4 mb-5 bg-body rounded">
+<div class="shadow-lg p-4 mb-5 bg-dark text-white rounded">
 <h1>Register</h1>
 </br>
     <div>
