--- a/mysite/stat_track/templates/stat_track/league_home.html
+++ b/mysite/stat_track/templates/stat_track/league_home.html
@@ -12,7 +12,15 @@
     <div class="container">
         <div class="row">
             <div class="col lg-10 card bg-dark text-white m-2 text-center">
-                <h2>{{ league.name }}</h2>
+                <div class="card-header">
+                    <h2>{{ league.name }}</h2>
+                </div>
+                <div class="card-content m-3">
+                    {% if request.user == owner %}
+                    <a href="{% url 'matchday_create' league.id %}"><button type="button" class="btn btn-outline-success">New Matchday</button></a>
+                    {% endif %}
+                    <a href="{% url 'players_list' league.id %}"><button type="button" class="btn btn-outline-success">Players List</button></a>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -22,7 +30,7 @@
             </div>
             <div class="list-group">
                 {% for matchday in latest_match_day_list %}
-                    <a href="{% url 'matchday' matchday.id %}" class="text-center list-group-item list-group-item-action list-group-item-dark">{{ matchday }}</a>
+                    <a href="{% url 'matchday' matchday.id %}" class="text-center list-group-item list-group-item-action bg-dark text-white">{{ matchday }}</a>
                 {% endfor %}
             </div>
           </div>
@@ -47,7 +55,7 @@
                         {% for player in players_list %}
                         <tr>
                             <td>{{ forloop.counter }}</th>
-                            <td><a href='player/{{ player.id }}'>{{ player }}</a></td>
+                            <td><a style="text-decoration: none" href='player/{{ player.id }}'>{{ player }}</a></td>
                             <td>{{ player.get_player_goals }}</td>
                             <td>{{ player.get_player_matches_played }}</td>
                             <td>{{ player.get_player_wins }}</td>
