--- a/mysite/stat_track/templates/stat_track/players_list.html
+++ b/mysite/stat_track/templates/stat_track/players_list.html
@@ -1,4 +1,5 @@
 {% extends "./base.html" %}
+{% load stat_tags %}
 {% load static %}
 
 {% block content %}
@@ -8,6 +9,9 @@
 {% endblock %}
 
 <div class="card" data-bs-theme="dark">
+    <div class="card-header text-white">
+        <a class="text-white" href="{% url 'league_home' league.id %}" style="text-decoration: none"><h2>{{ league.name }}</h2></a>
+    </div>
     <div class="table-responsive">
         <table id="playersList"class="table table-dark table-striped" style="white-space:nowrap;">
             <thead>
@@ -31,12 +35,12 @@
                 {% for player in players_list %}
                 <tr>
                     <td>{{ forloop.counter }}</th>
-                    <td><a href='player/{{ player.id }}'>{{ player.first_name }}</a></td>
-                    <td><a href='player/{{ player.id }}'>{{ player.last_name }}</a></td>
+                    <td><a class="text-white" style="text-decoration: none" href='player/{{ player.id }}'>{{ player.first_name }}</a></td>
+                    <td><a class="text-white" style="text-decoration: none" href='player/{{ player.id }}'>{{ player.last_name }}</a></td>
                     <td>{{ player.get_player_goals }}</td>
                     <td>{{ player.get_player_goals_per_match }}</td>
                     <td>{{ player.get_player_matches_played }}</td>
-                    <td>{{ player.get_player_matchdays }}</td>
+                    <td>{% get_player_matchdays_in_league player league %}</td>
                     <td>{{ player.get_total_points }}</td>
                     <td>{{ player.get_points_per_match }}</td>
                     <td>{{ player.get_player_wins }}</td>
