Adjust players_list and player views to retrieve league info

--- a/mysite/stat_track/templates/stat_track/create_matchday.html
+++ b/mysite/stat_track/templates/stat_track/create_matchday.html
@@ -44,6 +44,7 @@
             <div class="row">
                 <div class="card text-bg-dark mb-3 container text-center col" style="max-width: 19rem">
                     <h2>Create Matchday</h2>
+                    <a style="text-decoration: none" href="{% url 'league_home' league.id %}"><h5 class="text-white">{{ league }}</h5></a>
                 </div>
             </div>
 
