--- a/mysite/stat_track/templates/stat_track/players_list.html
+++ b/mysite/stat_track/templates/stat_track/players_list.html
@@ -35,8 +35,8 @@
                 {% for player in players_list %}
                 <tr>
                     <td>{{ forloop.counter }}</th>
-                    <td><a class="text-white" style="text-decoration: none" href='player/{{ player.id }}'>{{ player.first_name }}</a></td>
-                    <td><a class="text-white" style="text-decoration: none" href='player/{{ player.id }}'>{{ player.last_name }}</a></td>
+                    <td><a class="text-white" style="text-decoration: none" href="{% url 'player_stats' league.id player.id %}">{{ player.first_name }}</a></td>
+                    <td><a class="text-white" style="text-decoration: none" href="{% url 'player_stats' league.id player.id %}">{{ player.last_name }}</a></td>
                     <td>{{ player.get_player_goals }}</td>
                     <td>{{ player.get_player_goals_per_match }}</td>
                     <td>{{ player.get_player_matches_played }}</td>
