--- a/mysite/stat_track/templates/stat_track/edit_matchday.html
+++ b/mysite/stat_track/templates/stat_track/edit_matchday.html
@@ -29,7 +29,7 @@
             <div class='card text-bg-dark'>
                 <a style="text-decoration: none" href="{% url 'league_home' league.id %}"><h2 class="text-white">{{ league }}</h2></a>
                 <div class='div d-flex justify-content-between align-items-center'>
-                    <h4 class='m-2'>{{ matchday }}</h4>
+                    <a style="text-decoration: none" href="{% url 'matchday' matchday.id %}"><h4 class="text-white m-2">{{ matchday }}</h4></a>
                     <button onclick="location.href='{% url 'matchday_delete' matchday.id %}'" class="btn btn-outline-danger m-2">Delete Matchday</button>
                 </div>
             </div>
