--- a/mysite/stat_track/templates/stat_track/league_create.html
+++ b/mysite/stat_track/templates/stat_track/league_create.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="shadow-lg p-4 mb-5 bg-dark text-white rounded">
     <h2>Create new league</h2>
-    <form action="{% url 'create_league' %}" method=POST>
+    <form action="{% url 'league_create' %}" method=POST>
         {% csrf_token %}
         {% for item in form %}
         {{ item.label }}  {{ item }}
