Adapt App to customUser model.

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     
-	  {% include 'stat_track/navbar.html' %}
+	  {% include 'navbar.html' %}
 	<br/>
   <div class="container">
 
