--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,7 +18,7 @@
                     <a class="nav-link" href="{% url 'login' %}">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'register_user' %}">Register</a>
+                    <a class="nav-link" href="{% url 'signup' %}">Register</a>
                 </li>
                 {% endif %}
             </ul>
