--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,6 +6,7 @@
     <h2>Log in</h2>
     <form method="post">
         {% csrf_token %}
+        <input type="hidden" name="next" value="{{ request.GET.next }}" />
         {{ form.as_p }}
         <button type="submit">Log In</button>
     </form>
