--- a/templates/invitation/invitation_accept.html
+++ b/templates/invitation/invitation_accept.html
@@ -9,17 +9,36 @@
 
 
 {% block content %}
-	<div class="card bg-dark text-white">
-		<div class="card-header">
-			<h3>Invitation for {{ player }}</h3>
+	{% if user.is_authenticated %}
+		Merge Player to user
+	{% else %}
+		<div class="card bg-dark text-white">
+			<div class="card-header">
+				<h3 class="text-center">Invitation for {{ player }} to {{ league }}</h3>
+			</div>
+			<div class="card-body">
+				<div class="row mb-3 text-center">
+					<div class="col-sm">
+						Already have an account? Log in!
+					</div>
+					<div class="col-sm">
+						New user? Sign Up!
+					</div>
+				</div>
+				<div class ="row text-center">
+					<div class="col-sm">
+						<form action="{% url 'account_login' %}?next={{request.path}}">
+							{% csrf_token %}
+							<p><button type="submit" class="btn btn-primary">Log in</button></p>
+							<input type="hidden" name="next" value="{{ request.path }}" />
+						</form>
+					</div>
+					<div class="col-sm">
+						<p><button type="button" class="btn btn-primary">Sign up</button></p>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="card-body">
-			Already have an account? Log in!
-			New user? Sign Up!
-		</div>
-		<div class="card-footer">
-			<button type="button" class="btn btn-primary">Log in</button>
-			<button type="button" class="btn btn-success">Sign up</button>
-		</div>
-	</div>
+	{% endif %}
+
 {% endblock content %}
