When inviting players, user can now both create and view existing invitations for certain player

--- a/templates/invitation/invitation_detail.html
+++ b/templates/invitation/invitation_detail.html
@@ -19,7 +19,7 @@
         {{ invitation.league }} - {{ invitation.player }}
 	</div>
 	<div class="copy-text card-body input-group">
-		<input type="text" class="text form-control" value="{{ accept_url }}" readonly/>
+		<input type="text" class="text form-control" value="{{ invitation.accept_url }}" readonly/>
 		<button class="btn btn-primary">Copy</button>
 	</div>
 </div>
