--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,10 +22,15 @@
                 </li>
                 {% endif %}
             </ul>
-            {% comment %} <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search for player" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form> {% endcomment %}
+
+            {% if user.is_authenticated %}
+            <ul class="navbar-nav mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <span class="nav-link">Logged in as {{ user }}</span>
+                </li>
+            </ul>
+            {% endif %}
+
         </div>
     </div>
 </nav>
