--- a/templates/players_list.html
+++ b/templates/players_list.html
@@ -29,7 +29,10 @@
                     <th onclick="sortTable(10)" scope="col" data-type="number">Loses</th>
                     <th onclick="sortTable(11)" scope="col" data-type="number">Draws</th>
                     <th onclick="sortTable(12)" scope="col" data-type="number">Win Ratio</th>
-                    <th>Invites</th>
+                    {% is_league_owner request.user league as is_owner %}
+                    {% if is_owner %}
+                        <th>Invites</th>
+                    {% endif %}
                 </tr>
             </thead>
             <tbody>
@@ -48,26 +51,28 @@
                     <td>{% get_player_loses_in_league player league %}</td>
                     <td>{% get_player_draws_in_league player league %}</td>
                     <td>{% get_player_win_ratio_in_league player league %}</td>
-                    <td>
-                    {% if player.user %}
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
-                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                            <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"/>
-                        </svg>
-                    {% else %}
-                        {% if player.get_invitation.is_active %}
-                            <form action={% url 'invitation_detail' league.id player.get_invitation %}>
-                                <button type="submit" class="btn btn-success">Invite</button>
-                            </form>
+                    {% if is_owner %}
+                        <td>
+                        {% if player.user %}
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                                <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"/>
+                            </svg>
                         {% else %}
-                            
-                                <form action={% url 'invitation_create' league.id player.id %}>
+                            {% if player.get_invitation.is_active %}
+                                <form action={% url 'invitation_detail' league.id player.get_invitation %}>
                                     <button type="submit" class="btn btn-success">Invite</button>
                                 </form>
-                            
+                            {% else %}
+                                
+                                    <form action={% url 'invitation_create' league.id player.id %}>
+                                        <button type="submit" class="btn btn-success">Invite</button>
+                                    </form>
+                                
+                            {% endif %}
                         {% endif %}
+                        </td>
                     {% endif %}
-                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
