Adjust PDF style

--- a/templates/league_pdf.html
+++ b/templates/league_pdf.html
@@ -22,7 +22,7 @@
       <meta charset="UTF-8">
       <title>{{ league }} - {{ date }}</title>
 </head>
-<h1>{{ league }} - {{ date }}</h1>
+<h3>League: {{ league }}<br>Date: {{ date }}</h3>
 <table id="playersList"class="td">
     <thead>
         <tr>
