--- a/templates/temp.html
+++ b/templates/temp.html
@@ -22,7 +22,7 @@
       <meta charset="UTF-8">
       <title>test league - 13/08/2023</title>
 </head>
-<h1>test league - 13/08/2023</h1>
+<h3>League: test league<br>Date: 13/08/2023</h3>
 <table id="playersList"class="td">
     <thead>
         <tr>
