Create pdf_generator app and move existing code to this app

--- a/templates/league_home.html
+++ b/templates/league_home.html
@@ -20,6 +20,7 @@
                     <a href="{% url 'matchday_create' league.id %}"><button type="button" class="btn btn-outline-success">New Matchday</button></a>
                     {% endif %}
                     <a href="{% url 'players_list' league.id %}"><button type="button" class="btn btn-outline-success">Players List</button></a>
+                    <a href="{% url 'generate_pdf_report' league.id %}"><button type="button" class="btn btn-outline-success">Generate Report</button></a>
                 </div>
             </div>
         </div>
