--- a/templates/temp.html
+++ b/templates/temp.html
@@ -20,9 +20,9 @@
             }
       </style>
       <meta charset="UTF-8">
-      <title>test league - 14/08/2023</title>
+      <title>Ligusia Miśiusia - 17/08/2023</title>
 </head>
-<h3>League: test league<br>Date: 14/08/2023</h3>
+<h3>League: Ligusia Miśiusia<br>Date: 17/08/2023</h3>
 <table id="playersList"class="td">
     <thead>
         <tr>
@@ -45,114 +45,34 @@
         
         <tr>
             <td>1</th>
-            <td>Stanisław</td>
-            <td>Bogumcki</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0.0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>50%</td>
-        </tr>
-        
-        <tr>
-            <td>2</th>
-            <td>Dominic</td>
-            <td>De coco</td>
-            <td>1</td>
-            <td>1.0</td>
-            <td>1</td>
-            <td>1</td>
-            <td>0.5</td>
-            <td>0.5</td>
-            <td>0</td>
-            <td>1</td>
-            <td>0</td>
-            <td>0%</td>
-        </tr>
-        
-        <tr>
-            <td>3</th>
-            <td>Pavel</td>
-            <td>Nedvedovic</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0.0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>50%</td>
-        </tr>
-        
-        <tr>
-            <td>4</th>
-            <td>Tomek</td>
-            <td>Pawelec</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0.0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>50%</td>
-        </tr>
-        
-        <tr>
-            <td>5</th>
-            <td>Kevin</td>
-            <td>Samwdomu</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0.0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>50%</td>
-        </tr>
-        
-        <tr>
-            <td>6</th>
-            <td>Tomasz</td>
-            <td>Wichniarek</td>
-            <td>7</td>
-            <td>2.33</td>
-            <td>3</td>
-            <td>1</td>
-            <td>9.5</td>
-            <td>3.17</td>
+            <td>Paweł</td>
+            <td>Sliski</td>
+            <td>4</td>
+            <td>2.0</td>
             <td>2</td>
             <td>1</td>
+            <td>6.0</td>
+            <td>3.0</td>
+            <td>1</td>
             <td>0</td>
+            <td>1</td>
             <td>67%</td>
         </tr>
         
         <tr>
-            <td>7</th>
-            <td>Zinedine</td>
-            <td>Zidane</td>
-            <td>10</td>
-            <td>2.5</td>
-            <td>4</td>
+            <td>2</th>
+            <td>Tomasz</td>
+            <td>Wolak</td>
             <td>1</td>
-            <td>11.0</td>
-            <td>2.75</td>
+            <td>0.5</td>
             <td>2</td>
-            <td>2</td>
+            <td>1</td>
+            <td>1.5</td>
+            <td>0.75</td>
             <td>0</td>
-            <td>50%</td>
+            <td>1</td>
+            <td>1</td>
+            <td>17%</td>
         </tr>
         
     </tbody>
