--- a/templates/temp.html
+++ b/templates/temp.html
@@ -20,9 +20,9 @@
             }
       </style>
       <meta charset="UTF-8">
-      <title>Ligusia Miśiusia - 17/08/2023</title>
+      <title>Liga majstrów - 18/08/2023</title>
 </head>
-<h3>League: Ligusia Miśiusia<br>Date: 17/08/2023</h3>
+<h3>League: Liga majstrów<br>Date: 18/08/2023</h3>
 <table id="playersList"class="td">
     <thead>
         <tr>
@@ -45,34 +45,18 @@
         
         <tr>
             <td>1</th>
-            <td>Paweł</td>
-            <td>Sliski</td>
-            <td>4</td>
-            <td>2.0</td>
-            <td>2</td>
-            <td>1</td>
-            <td>6.0</td>
-            <td>3.0</td>
-            <td>1</td>
+            <td>Kacper</td>
+            <td>Adams</td>
             <td>0</td>
-            <td>1</td>
-            <td>67%</td>
-        </tr>
-        
-        <tr>
-            <td>2</th>
-            <td>Tomasz</td>
-            <td>Wolak</td>
-            <td>1</td>
-            <td>0.5</td>
-            <td>2</td>
-            <td>1</td>
-            <td>1.5</td>
-            <td>0.75</td>
             <td>0</td>
-            <td>1</td>
-            <td>1</td>
-            <td>17%</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0.0</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+            <td>50%</td>
         </tr>
         
     </tbody>
