Add PDF file display

--- a/templates/pdf_generator/report_success.html
+++ b/templates/pdf_generator/report_success.html
@@ -11,7 +11,7 @@
     <div class="card-body">
         League: <b>{{ object.league }}</b></br>
         Generated on <b>{{ object.generated }}</b></br>
-        <button type="button" class="btn btn-success" onclick="window.location.href='{{ object.url }}'">
+        <button type="button" class="btn btn-success" onclick="window.location.href='{{object.pdf.url}}'">
             View Report
         </button>
     </div>
