User can save PDF file to Cloud

--- a/templates/pdf_generator/report_success.html
+++ b/templates/pdf_generator/report_success.html
@@ -4,6 +4,23 @@
 {% block title %}Report Detail{% endblock %}
 
 {% block content %}
+{% comment %} <div class="card bg-dark text-white">
+    <div class="card-header text-center">
+        <h3>{{ object }}</h3>
+    </div>
+    <div class="card-body">
+        League: <b>{{ object.league }}</b></br>
+        Generated on <b>{{ object.generated }}</b></br>
+        <div>
+            <button type="button" class="btn btn-success" onclick="window.location.href='{{object.pdf.url}}'">
+                View Report
+            </button>
+            <form action="save-report" method="post">
+                <input class="btn btn-primary" type="submit" value="Save to Cloud">
+            </form>
+        </div>
+    </div>
+</div> {% endcomment %}
 <div class="card bg-dark text-white">
     <div class="card-header text-center">
         <h3>{{ object }}</h3>
@@ -11,9 +28,16 @@
     <div class="card-body">
         League: <b>{{ object.league }}</b></br>
         Generated on <b>{{ object.generated }}</b></br>
-        <button type="button" class="btn btn-success" onclick="window.location.href='{{object.pdf.url}}'">
-            View Report
-        </button>
+        <div class="d-flex justify-content-between">
+            <button type="button" class="btn btn-success" onclick="window.location.href='{{object.pdf.url}}'">
+                View Report
+            </button>
+            <form action="{% url 'pdf_success' object.id %}" method="post">
+                {% csrf_token %}
+                <button class="btn btn-primary" type="submit" name="save-to-cloud" value="save-to-cloud">Save to Cloud</button>
+            </form>
+        </div>
     </div>
 </div>
+
 {% endblock %}
