--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,6 +13,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'user_reports' %}">Reports</a>
+                </li>
                 {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'account_login' %}">Login</a>
