--- a/templates/temp.html
+++ b/templates/temp.html
@@ -20,9 +20,9 @@
             }
       </style>
       <meta charset="UTF-8">
-      <title>Liga majstrów - 2023-08-19</title>
+      <title>Liga Sprawiedliwości - 2023-08-20</title>
 </head>
-<h3>League: Liga majstrów<br>Date: 2023-08-19</h3>
+<h3>League: Liga Sprawiedliwości<br>Date: 2023-08-20</h3>
 <table id="playersList"class="td">
     <thead>
         <tr>
@@ -45,18 +45,50 @@
         
         <tr>
             <td>1</th>
-            <td>Kacper</td>
-            <td>Adams</td>
+            <td>Ricardo</td>
+            <td>Kawala</td>
+            <td>6</td>
+            <td>2.0</td>
+            <td>3</td>
+            <td>1</td>
+            <td>9.0</td>
+            <td>3.0</td>
+            <td>2</td>
+            <td>1</td>
             <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0.0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
+            <td>67%</td>
+        </tr>
+        
+        <tr>
+            <td>2</th>
+            <td>Tomek</td>
+            <td>Smok</td>
+            <td>33</td>
+            <td>16.5</td>
+            <td>2</td>
+            <td>1</td>
+            <td>19.5</td>
+            <td>9.75</td>
+            <td>1</td>
+            <td>1</td>
             <td>0</td>
             <td>50%</td>
+        </tr>
+        
+        <tr>
+            <td>3</th>
+            <td>Andryi</td>
+            <td>Smolenczyk</td>
+            <td>1</td>
+            <td>1.0</td>
+            <td>1</td>
+            <td>1</td>
+            <td>0.5</td>
+            <td>0.5</td>
+            <td>0</td>
+            <td>1</td>
+            <td>0</td>
+            <td>0%</td>
         </tr>
         
     </tbody>
