--- a/templates/temp.html
+++ b/templates/temp.html
@@ -20,9 +20,9 @@
             }
       </style>
       <meta charset="UTF-8">
-      <title>Liga Sprawiedliwości - 2023-08-20</title>
+      <title>Liga Sprawiedliwości - 2023-08-21</title>
 </head>
-<h3>League: Liga Sprawiedliwości<br>Date: 2023-08-20</h3>
+<h3>League: Liga Sprawiedliwości<br>Date: 2023-08-21</h3>
 <table id="playersList"class="td">
     <thead>
         <tr>
@@ -45,30 +45,14 @@
         
         <tr>
             <td>1</th>
-            <td>Ricardo</td>
-            <td>Kawala</td>
-            <td>6</td>
-            <td>2.0</td>
-            <td>3</td>
-            <td>1</td>
-            <td>9.0</td>
-            <td>3.0</td>
+            <td>Kacper</td>
+            <td>Adams</td>
+            <td>10</td>
+            <td>5.0</td>
             <td>2</td>
             <td>1</td>
-            <td>0</td>
-            <td>67%</td>
-        </tr>
-        
-        <tr>
-            <td>2</th>
-            <td>Tomek</td>
-            <td>Smok</td>
-            <td>33</td>
-            <td>16.5</td>
-            <td>2</td>
-            <td>1</td>
-            <td>19.5</td>
-            <td>9.75</td>
+            <td>8.0</td>
+            <td>4.0</td>
             <td>1</td>
             <td>1</td>
             <td>0</td>
@@ -76,17 +60,33 @@
         </tr>
         
         <tr>
+            <td>2</th>
+            <td>Ricardo</td>
+            <td>Kawala</td>
+            <td>22</td>
+            <td>5.5</td>
+            <td>4</td>
+            <td>1</td>
+            <td>20.0</td>
+            <td>5.0</td>
+            <td>3</td>
+            <td>1</td>
+            <td>0</td>
+            <td>75%</td>
+        </tr>
+        
+        <tr>
             <td>3</th>
             <td>Andryi</td>
             <td>Smolenczyk</td>
+            <td>2</td>
+            <td>1.0</td>
+            <td>2</td>
             <td>1</td>
             <td>1.0</td>
-            <td>1</td>
-            <td>1</td>
-            <td>0.5</td>
             <td>0.5</td>
             <td>0</td>
-            <td>1</td>
+            <td>2</td>
             <td>0</td>
             <td>0%</td>
         </tr>
